@@ -40,10 +40,15 @@ S3method("extractdcdiag", "default")
 S3method("updated.model", "mcmc.list")
 S3method("update", "mcmc.list")
 
+S3method("coef", "mcmc")
+S3method("vcov", "mcmc")
+S3method("quantile", "mcmc")
 S3method("as.mcmc.list", "bugs")
 S3method("print", "mcmc.list")
 S3method("quantile", "mcmc.list")
 S3method("coef", "mcmc.list")
+S3method("dcsd", "mcmc.list")
+S3method("vcov", "mcmc.list")
 S3method("vcov", "mcmc.list")
 S3method("vcov", "mcmc.list.dc")
 S3method("confint", "mcmc.list.dc")
