@@ -1,0 +1,2 @@
+coef.mcmc <- function(object, ...) 
+    dclone:::coef.mcmc.list(as.mcmc.list(object), ...)
