@@ -1,0 +1,8 @@
+dcsd <-
+function(object, na.rm = FALSE)
+{
+    ncl <- nclones(x)
+    if (is.null(ncl))
+        ncl <- 1
+    mcmcapply(x, sd, na.rm=na.rm) * sqrt(ncl)
+}
