@@ -1,0 +1,2 @@
+quantile.mcmc <- function(x, ...)
+    dclone:::quantile.mcmc.list(as.mcmc.list(x), ...)
