@@ -1,0 +1,2 @@
+vcov.mcmc <- function(object, ...) 
+    dclone:::vcov.mcmc.list(as.mcmc.list(object), ...)
